2009-04-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-transform.c:
	- Patched memory leak, bug #578372, from Machael Chudobiak

2009-04-08  Shaun McCance  <shaunm@gnome.org>

	* src/info2html/Makefile.am:
	* src/info2html/html.c:
	* src/info2html/html.h:
	* src/info2html/main.c:
	* src/info2html/utils.c:
	* src/info2html/utils.h:
	* src/man2html/Makefile.am:
	* src/man2html/README:
	* src/test-pager.c:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-db-print-pager.c:
	* src/yelp-db-print-pager.h:
	* src/yelp-info-pager.c:
	* src/yelp-info-pager.h:
	* src/yelp-man-pager.c:
	* src/yelp-man-pager.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-search-pager.c:
	* src/yelp-search-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-toc-pager.h:
	* src/yelp-xslt-pager.c:
	* src/yelp-xslt-pager.h:
	- Removing old files

2009-04-08  Pedro Fragoso  <ember@ubuntu.com>

	* src/gtkentryaction.c:
	* src/gtkentryaction.h:
	* src/yelp-bookmarks.c:
	* src/yelp-bookmarks.h:
	* src/yelp-main.c:
	* src/yelp-print.h:
	* src/yelp-settings.h:
	* src/yelp-window.h:
	GNOME Goal: Clean up GLib and GTK+ includes (Closes: #563865)

2009-03-16  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 2.26.0

2009-03-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-man-parser.c:
	- Don't assume order of certain macros, bug #568066, from Andy Owen

2009-03-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-document.c:
	- Unlock mutex on error, bug #568058, from Andy Owen

	* stylesheets/toc2html.xsl.in:
	- Indentation fix

2009-03-02  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 2.25.1

2009-03-01  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-toc.c:
	* stylesheets/toc2html.xsl:
	* stylesheets/toc2html.xsl.in:
	* stylesheets/Makefile.am:
	- RTL fixes for bug #573159

2009-03-01  Christian Persch  <chpe@gnome.org>

	* configure.in: Treat libxul and libxul-embedding the same as far as the